httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-httpd
  namespace: default
  labels:
    app: simple-httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-httpd
  template:
    metadata:
      labels:
        app: simple-httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/local/apache2/htdocs/index.html
          subPath: index.html
      volumes:
      - name: html-volume
        configMap:
          name: httpd-index-html
---
apiVersion: v1
kind: Service
metadata:
  name: simple-httpd-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: simple-httpd
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
