nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  namespace: default
  labels:
    app: simple-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html-volume
        configMap:
          name: nginx-index-html
---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: simple-nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
