ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: simple-nginx-svc
            port:
              number: 80
      - path: /httpd
        pathType: Prefix
        backend:
          service:
            name: simple-httpd-svc
            port:
              number: 80
